<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/filters"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="20sp"
        app:drawableLeftCompat="@drawable/baseline_filter_alt_24"
        app:drawableRightCompat="@drawable/baseline_filter_alt_24" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/baseline_gps_fixed_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="@string/location_radius"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/location_distance_radius_value_textview"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="5dp"
            android:text="300" />

        <SeekBar
            android:id="@+id/location_distance_radius_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:max="300"
            android:min="1"
            android:thumb="@drawable/baseline_gps_fixed_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/tractor_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="@string/caategories"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/equipments_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equipments" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/seeds_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seeds" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fertilizers_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fertilizers" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/baseline_currency_rupee_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="@string/price"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/price_value_textview"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="5dp"
            android:text="2500" />

        <SeekBar
            android:id="@+id/price_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:max="5000"
            android:min="1"
            android:thumb="@drawable/baseline_currency_rupee_24" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:id="@+id/reset_filter_btn"
            android:backgroundTint="#7DC729"
            android:drawableLeft="@drawable/baseline_filter_alt_off_24"
            android:text="@string/reset_filter" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:id="@+id/apply_filter_btn"
            android:backgroundTint="#7DC729"
            android:drawableLeft="@drawable/baseline_filter_alt_24"
            android:text="@string/apply_filter" />
    </LinearLayout>
</LinearLayout>



