<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="50dp"
    app:contentPadding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="140dp"
            android:elevation="10dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:src="@drawable/order_summary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/order_summary"
            android:textAlignment="center"
            android:textColor="@color/dark_green"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/PName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:text="@string/product_name"
            android:textAlignment="textStart"
            android:textColor="@color/dark_green"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/PPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:text="@string/price"
            android:textAlignment="textStart"
            android:textColor="@color/dark_green"
            android:textSize="16dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="@string/select_quantity"
                android:textAlignment="textStart"
                android:textColor="@color/dark_green"
                android:textSize="16dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/shape_3"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/decrease_btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_4"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="-1"
                        android:textColor="#000"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="11"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/quantity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="1"
                        android:textColor="@color/primary_dark"
                        android:textSize="20sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/increase_btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_2"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="+1"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="150dp"
            android:id="@+id/continueShoppingBtn"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginVertical="10dp"
            android:drawableRight="@drawable/baseline_arrow_right_alt_24"
            android:text="@string/continuebtn" />
    </LinearLayout>
</androidx.cardview.widget.CardView>


